# substreams-ethereum-quickstart

./: .gitignore  Cargo.toml  Makefile  README.md  substreams-ethereum-tutorial.yaml  substreams.yaml
proto/: basicexample.proto
src/: lib.rs
src/pb/: eth.basicexample.v1.rs  mod.rs
