[package]
name = "substreams-ethereum-quickstart"
version = "1.0.0"
edition = "2021"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
substreams = "0.5"
substreams-ethereum = "0.9"
prost = "0.11"
prost-types = "0.11.8"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
